IA-64: Fix linker error with --no-keep-memory.

Import patch from mainline:
	2018-02-26  Jim Wilson  <jimw@sifive.com>
	Stephan Schreiber <info@fs-driver.org>

	PR 15904
	* elfnn-ia64.c (elfNN_ia64_relax_section): After ia64_elf_relax_brl
	call, set changed_contents and changed_relocs.  Likewise after
	successful ia64_elf_relax_br call.